--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vladicamp 2025</title>
-    <!-- Tailwind CSS desde CDN está bien para estilos rápidos, pero idealmente se instala, lo mantenemos por ahora para no romper estilos -->
+    <!-- Mantenemos Tailwind CDN por simplicidad como pediste -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
